# Adam-Lang

./: .gitignore  Cargo.toml  grammar.md  readme.md
.github/workflows/: ci.yml
src/: generate.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/ast/: expression.rs  function.rs  mod.rs  module.rs  node.rs  operator.rs  value.rs
tests/: add_constants.junk
