[package]
name = "s1mple"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A toy language/compiler for learning compiler design."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.85.2"
cranelift-object = "0.85.2"
cranelift-native = "0.85.2"
cranelift-module = "0.85.2"
